fix lists on firefox

--- a/css/shanti-main.css
+++ b/css/shanti-main.css
@@ -1078,6 +1078,7 @@ ul.shanti-gallery{
 	margin:0;
 	padding:0;
 	position:relative;
+	list-style-type:none;
 	/*
  -webkit-column-width: 12em;
  -webkit-column-gap: 1em;  
@@ -1108,15 +1109,16 @@ ul.shanti-gallery > div{
 
 .shanti-thumbnail { 
 	color:#444;
+	background-color: #fff;	
 	float:left;
   width:  100%;
   /* max-width: 11.75em; */
-	min-height: 18.5em;
+	min-height: 18em;
 	padding: 0;
   margin: 0;
 	border-radius: 0.32em;
 	background-clip: padding-box;
-	background-color: #FFFFFF;	
+	list-style-type:none;
 	display: inline-block;
   position:relative;
   -webkit-box-shadow: 0 3px 3px rgba(50, 50, 50, 0.2750);
